[options]
zip_safe = False
python_requires = >=3.7
py_modules = blagger
install_requires =
    pyinjector

[metadata]
name = blagger
version = 0.1.0
description = A tool/library allowing python code injection into running python processes
author = Maor Kleinberger
author_email = kmaork@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE.txt
keywords = injection library
url = https://github.com/kmaork/blagger
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules