[options]
zip_safe = False
python_requires = >=3.7
packages = hypno
install_requires =
    pyinjector>=0.1.2

[metadata]
name = hypno
version = 0.1.3
description = A tool/library allowing to inject python code into a running python process.
author = Maor Kleinberger
author_email = kmaork@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE.txt
keywords = injection library
url = https://github.com/kmaork/hypno
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

